--- a/index.html
+++ b/index.html
@@ -1,164 +1,165 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-  <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" href="styles/styles.css">
-  <!--<base href="https://htmlacademy-htmlcss.github.io/2214509-sedona-35/3/">-->
-</head>
+    <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
+  </head>
 
-<body>
-  <header class="header">
-    <nav class="navigation">
-      <a class="navigation-logo">
-        <img src="images/brand_sedona.png" alt="Логотип Sedona" width="140" height="70">
-      </a>
-           <ul class="navigation-list list-reset">
-        <li class="navigation-item">
-          <a class="navigation-link navigation-link-current">Главная</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">О Седоне</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="catalog.html">Гостиницы</a>
-        </li>
-      </ul>
-      <ul class="navigation-list navigation-user-list list-reset">
-        <li class="navigation-user-item">
-          <a class="navigation-user-link navigation-user-link-search" href="#">
-            <span class="visually-hidden">Поиск</span>
-          </a>
-        </li>
-        <li class="navigation-user-item">
-          <a class="navigation-user-link navigation-user-link-favorites" href="#">
-            <span class="visually-hidden">Избранное</span>
-            <span class="navigation-user-link-favorites-num">12</span>
-          </a>
-        </li>
-      </ul>
-      <a class="button navigation-button" href="#">Хочу сюда!</a>
-    </nav>
-  </header>
+  <body>
+    <header class="header">
+      <nav class="navigation">
+        <a class="navigation-logo">
+          <img src="images/svg/logo-sedona.svg" alt="Логотип Sedona" width="140" height="70">
+        </a>
+        <ul class="navigation-list list-reset">
+          <li class="navigation-item">
+            <a class="navigation-link navigation-link-current">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user-list list-reset">
+          <li class="navigation-user-item">
+            <a class="navigation-user-link navigation-user-link-search" href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-user-item">
+            <a class="navigation-user-link navigation-user-link-favorites" href="#">
+              <span class="visually-hidden">Избранное</span>
+              <span class="navigation-user-link-favorites-num">12</span>
+            </a>
+          </li>
+        </ul>
+        <a class="button navigation-button" href="#">Хочу сюда!</a>
+      </nav>
+    </header>
     <main class="main">
-       <section class="greeting">
-      <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-      <div class="greeting-img">
-        <img src="images/welcome.svg" alt="Welcome to the gargeous" width="457" height="351">
-      </div>
-      <div class="greeting-descript">
-        <h2 class="greeting-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-        <p class="greeting-text">Рассмотрим причины, по которым Седона круче, чем Гранд Каньон!</p>
-      </div>
-    </section>
-    <section class="advantages">
-     <h2 class="visually-hidden">Преимущества</h2>
-           <ul class="advantages-list list-reset">
-        <li class="advantages-item advantages-item-full">
-          <div class="advantages-item-container">
-            <div class="advantages-content advantages-content-blue">
-              <h3 class="advantages-title">Настоящий городок</h3>
-              <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+      <section class="greeting">
+        <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
+        <div class="greeting-img">
+          <img src="images/svg/welcome.svg" alt="Welcome to the gargeous" width="457" height="351">
+        </div>
+        <div class="greeting-descript">
+          <h2 class="greeting-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+          <p class="greeting-text">Рассмотрим причины, по которым Седона круче, чем Гранд Каньон!</p>
+        </div>
+      </section>
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantages-list list-reset">
+          <li class="advantages-item advantages-item-full">
+            <div class="advantages-item-container">
+              <div class="advantages-content advantages-content-blue">
+                <h3 class="advantages-title">Настоящий городок</h3>
+                <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              </div>
+              <div class="advantages-image">
+                <img src="images/photo-1.jpg" alt="Фото здания в городе" width="800" height="384">
+              </div>
             </div>
-            <div class="advantages-image">
-              <img src="images/photo-1.jpg" alt="Фото здания в городе" width="800" height="384">
+          </li>
+          <li class="advantages-item">
+            <div class="advantages-content">
+              <h3 class="advantages-title">Небольшая площадь</h3>
+              <p class="advantages-description">Все достопримечательности находятся очень близко</p>
             </div>
-          </div>
-        </li>
-        <li class="advantages-item">
-          <div class="advantages-content">
-            <h3 class="advantages-title">Небольшая площадь</h3>
-            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-          </div>
-        </li>
-        <li class="advantages-item">
-          <div class="advantages-content">
-            <h3 class="advantages-title">Красивая дорога</h3>
-            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </div>
-        </li>
-        <li class="advantages-item">
-          <div class="advantages-content">
-            <h3 class="advantages-title">Мало туристов</h3>
-            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
-          </div>
-        </li>
-        <li class="advantages-item advantages-item-full">
-          <div class="advantages-item-container">
-            <div class="advantages-content advantages-content-blue">
-              <h3 class="advantages-title">Там есть Мост Дьявола</h3>
-              <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+          <li class="advantages-item">
+            <div class="advantages-content">
+              <h3 class="advantages-title">Красивая дорога</h3>
+              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </div>
-            <div class="advantages-image">
-              <img src="images/photo-2.jpg" alt="Фото моста Дьявола" width="800" height="384">
+          </li>
+          <li class="advantages-item">
+            <div class="advantages-content">
+              <h3 class="advantages-title">Мало туристов</h3>
+              <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </div>
-          </div>
-        </li>
-      </ul>
-      <h2 class="visually-hidden">Предложения</h2>
-      <ul class="advantages-list advantages-list-recommendations list-reset">
-        <li class="advantages-item">
-          <div class="advantages-content advantages-content-home">
-            <h3 class="advantages-title">Жильё</h3>
-            <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          </div>
-        </li>
-        <li class="advantages-item">
-          <div class="advantages-content advantages-content-food">
-            <h3 class="advantages-title">Еда</h3>
-            <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-          </div>
-        </li>
-        <li class="advantages-item">
-          <div class="advantages-content advantages-content-plus">
-            <h3 class="advantages-title">Сувениры</h3>
-            <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
-          </div>
-        </li>
-      </ul>
-    </section>
+          </li>
+          <li class="advantages-item advantages-item-full">
+            <div class="advantages-item-container">
+              <div class="advantages-content advantages-content-blue">
+                <h3 class="advantages-title">Там есть Мост Дьявола</h3>
+                <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              </div>
+              <div class="advantages-image">
+                <img src="images/photo-2.jpg" alt="Фото моста Дьявола" width="800" height="384">
+              </div>
+            </div>
+          </li>
+        </ul>
+        <h2 class="visually-hidden">Предложения</h2>
+        <ul class="advantages-list advantages-list-recommendations list-reset">
+          <li class="advantages-item">
+            <div class="advantages-content advantages-content-home">
+              <h3 class="advantages-title">Жильё</h3>
+              <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </div>
+          </li>
+          <li class="advantages-item">
+            <div class="advantages-content advantages-content-food">
+              <h3 class="advantages-title">Еда</h3>
+              <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            </div>
+          </li>
+          <li class="advantages-item">
+            <div class="advantages-content advantages-content-plus">
+              <h3 class="advantages-title">Сувениры</h3>
+              <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
+            </div>
+          </li>
+        </ul>
+      </section>
 
-    <section class="search">
-      <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
-      <h2 class="search-title">Заинтересовались?</h2>
-      <p class="search-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="button search-button" href="#">Поиск гостиницы в Седоне</a>
-    </section>
-    <section class="subscribe subscribe-home">
-      <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-      <p class="subscribe-text">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
+      <section class="search">
+        <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
+        <h2 class="search-title">Заинтересовались?</h2>
+        <p class="search-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="button search-button" href="#">Поиск гостиницы в Седоне</a>
+      </section>
 
-      <form class="subscribe-form" action="http://echo.htmlacademy.ru" method="POST">
-        <label class="visually-hidden" for="email">Ваш email</label>
-        <input class="subscribe-input form-input" id="email" name="email" type="email" placeholder="Ваш e-mail" required>
-        <button class="button button-blue subscribe-button" type="submit">Подписаться</button>
-      </form>
-    </section>
-  </main>
+      <section class="subscribe subscribe-home">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-text">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
+
+        <form class="subscribe-form" action="http://echo.htmlacademy.ru" method="POST">
+          <label class="visually-hidden" for="email">Ваш email</label>
+          <input class="subscribe-input form-input" id="email" name="email" type="email" placeholder="Ваш e-mail" required>
+          <button class="button button-blue subscribe-button" type="submit">Подписаться</button>
+        </form>
+      </section>
+    </main>
     <footer class="footer">
-     <ul class="footer-social social list-reset">
-      <li class="social-item">
-        <a class="social-link" href="https://vk.com/htmlacademy" aria-label="Vk">
-          <img src="images/Social=Vk, State=State4.png" alt="Вконтакте">
-        </a>
-      </li>
-      <li class="social-item">
-        <a class="social-link" href="https://t.me/htmlacademy" aria-label="Telegram">
-          <img src="images/Social=Telegram, State=State5.png" alt="Телеграм">
-        </a>
-      </li>
-      <li class="social-item">
-        <a class="social-link" href="https://www.youtube.com/user/htmlacademyru" aria-label="Youtube">
-          <img src="images/Social=Youtube, State=State6.png" alt="Ютуб">
-        </a>
-      </li>
-    </ul>
-    <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-    <a class="footer-logo" href="https://htmlacademy.ru/" aria-label="Логотип HTMLAcademy">
-      <img src="images/Vectorhtmlacademy.png" alt="htmlacademy">
-    </a>
-  </footer>
-</body>
+      <ul class="footer-social social list-reset">
+        <li class="social-item">
+          <a class="social-link" href="https://vk.com/htmlacademy" aria-label="Vk">
+            <img src="images/svg/icon-vk.svg" alt="Вконтакте">
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-link" href="https://t.me/htmlacademy" aria-label="Telegram">
+            <img src="images/svg/icon-telegram.svg" alt="Телеграм">
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-link" href="https://www.youtube.com/user/htmlacademyru" aria-label="Youtube">
+            <img src="images/svg/icon-youtube.svg" alt="Ютуб">
+          </a>
+        </li>
+      </ul>
+      <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="footer-logo" href="https://htmlacademy.ru/" aria-label="Логотип HTMLAcademy">
+        <img src="images/svg/icon-htmlacademy.svg" alt="htmlacademy">
+      </a>
+    </footer>
+  </body>
+
 </html>
